@@ -1,10 +1,13 @@
 package com.nhl.link.rest.runtime.processor.meta;
 
 import com.nhl.link.rest.ResourceEntity;
+import com.nhl.link.rest.meta.LrAttribute;
 import com.nhl.link.rest.meta.LrEntity;
+import com.nhl.link.rest.meta.LrRelationship;
 import com.nhl.link.rest.meta.LrResource;
 import com.nhl.link.rest.processor.Processor;
 import com.nhl.link.rest.processor.ProcessorOutcome;
+import com.nhl.link.rest.runtime.constraints.IConstraintsHandler;
 import com.nhl.link.rest.runtime.encoder.IEncoderService;
 import com.nhl.link.rest.runtime.meta.IMetadataService;
 import com.nhl.link.rest.runtime.meta.IResourceMetadataService;
@@ -21,15 +24,18 @@ public class CollectMetadataStage implements Processor<MetadataContext<?>> {
     private IMetadataService metadataService;
     private IResourceMetadataService resourceMetadataService;
     private IEncoderService encoderService;
+    private IConstraintsHandler constraintsHandler;
 
     public CollectMetadataStage(
             @Inject IMetadataService metadataService,
             @Inject IResourceMetadataService resourceMetadataService,
-            @Inject IEncoderService encoderService) {
+            @Inject IEncoderService encoderService,
+            @Inject IConstraintsHandler constraintsHandler) {
 
         this.metadataService = metadataService;
         this.resourceMetadataService = resourceMetadataService;
         this.encoderService = encoderService;
+        this.constraintsHandler = constraintsHandler;
     }
 
     @Override
@@ -43,6 +49,7 @@ public class CollectMetadataStage implements Processor<MetadataContext<?>> {
         LrEntity<T> entity = metadataService.getLrEntity(context.getType());
         Collection<LrResource<?>> resources = resourceMetadataService.getLrResources(context.getResource());
         Collection<LrResource<T>> filteredResources = new ArrayList<>(resources.size());
+
         for (LrResource<?> resource : resources) {
             LrEntity<?> resourceEntity = resource.getEntity();
             if (resourceEntity != null && resourceEntity.getName().equals(entity.getName())) {
@@ -50,10 +57,26 @@ public class CollectMetadataStage implements Processor<MetadataContext<?>> {
             }
         }
 
-        ResourceEntity<T> resourceEntity = new ResourceEntity<>(entity);
+        ResourceEntity<T> resourceEntity = createDefaultResourceEntity(entity);
+        constraintsHandler.constrainResponse(resourceEntity, null, context.getConstraint());
         resourceEntity.setApplicationBase(context.getApplicationBase());
 
         context.setResources(filteredResources);
         context.setEncoder(encoderService.metadataEncoder(resourceEntity));
+    }
+
+    private <T> ResourceEntity<T> createDefaultResourceEntity(LrEntity<T> entity) {
+        ResourceEntity<T> resourceEntity = new ResourceEntity<>(entity);
+
+        for (LrAttribute a : entity.getAttributes()) {
+            resourceEntity.getAttributes().put(a.getName(), a);
+        }
+
+        for (LrRelationship r : entity.getRelationships()) {
+            ResourceEntity<?> child = new ResourceEntity<>(r.getTargetEntity(), r);
+            resourceEntity.getChildren().put(r.getName(), child);
+        }
+
+        return resourceEntity;
     }
 }
