@@ -1,6 +1,7 @@
 Release 2.10
 
 #254 Upgrade to Jackson 2.6.4
+#255 Support for constraints in MetadataBuilder
 #256 Built-in JsonValueConverter for enums
 #258 "AdHoc" properties
 #259 NPE in metadata resource when the model has unknown attribute types
